works for JDK 25