@@ -1,4 +1,5 @@
 #!/bin/bash
 
+export JAVA_OPTS="--enable-preview"
 sbt run 
 
